Implemented count-min sketch structs and basic functions (initialization, seeding, updates). Made minor changes to lowl_hash.h, namely #include-ing lowl_types.h in the header file so that the typedefs would happen automatically even in programs that didn't include lowl_types.h. I suspect this is, in general, not a good thing to do, but I don't know one way or the other. We might want to go back and restructure things to fix this in the future.

--- a/core/Makefile
+++ b/core/Makefile
@@ -6,13 +6,16 @@ OPT = -O4 -g -std=gnu99 -Wall
 
 #######################################
 
-all : lowl_hash.o lowl_math.o tests
+all : lowl_hash.o lowl_math.o lowl_sketch.o tests
 
 lowl_hash.o : lowl_hash.c lowl_hash.h Makefile
 	gcc ${OPT} -c lowl_hash.c -lm
 
 lowl_math.o : lowl_math.c lowl_math.h Makefile
 	gcc ${OPT} -c lowl_math.c
+
+lowl_sketch.o : lowl_sketch.c lowl_sketch.h Makefile
+	gcc ${OPT} -c lowl_sketch.c
 
 tests : tests.o lowl_math.o lowl_hash.o
 	gcc ${OPT} -o tests tests.o lowl_math.o lowl_hash.o -lm
