--- a/core/Makefile
+++ b/core/Makefile
@@ -9,7 +9,7 @@ OPT = -O4 -g -std=gnu99 -Wall
 all : lowl_hash.o lowl_math.o lowl_sketch.o tests
 
 lowl_hash.o : lowl_hash.c lowl_hash.h Makefile
-	gcc ${OPT} -c lowl_hash.c -lm
+	${CC} ${OPT} -c lowl_hash.c -lm
 
 lowl_math.o : lowl_math.c lowl_math.h Makefile
 	gcc ${OPT} -c lowl_math.c
