tests run, somehow.

--- a/core/Makefile
+++ b/core/Makefile
@@ -1,9 +1,9 @@
 #### MACROS ###########################
 
 CC = gcc
+LD = gcc
 
 CC_FLAGS = -O0 -g -std=gnu99 -Wall -fPIC
-LD_FLAGS = -shared
 
 LIB_NAME = liblowl.so
 OBJECTS = lowl_hash.o lowl_math.o lowl_sketch.o
@@ -11,20 +11,25 @@ OBJECTS = lowl_hash.o lowl_math.o lowl_sketch.o
 #######################################
 
 .PHONY: all
-all : ${OBJECTS} tests
+all : $(OBJECTS) tests
 
 %.o: %.c %.h
 	$(CC) $(CC_FLAGS) -c $<
 
-tests : tests.o $(LIB_NAME)
-	${CC} ${CC_FLAGS} ${LD_FLAGS} -o tests $< $(LIB_NAME)
-
-tests.o : tests.c lowl_math.h lowl_hash.h
-	${CC} ${CC_FLAGS} -c $<
+tests : tests.c lowl_math.h lowl_hash.h $(LIB_NAME)
+	$(CC) $(CC_FLAGS) $< -Wl,-rpath,. -L. -llowl -lm -o $@
+	#$(CC) -Wall -g -std=gnu99 -O0 -L. $< -llowl -o $@
 
 $(LIB_NAME): $(OBJECTS)
-	$(CC) $(CC_FLAGS) $(LD_FLAGS) -o $(LIB_NAME) $(OBJECTS) -lm
+	$(LD) -shared -Wl,-rpath,. -Wl,-soname,$(LIB_NAME) -lm -o $@ $(OBJECTS)
 
 .PHONY: clean
 clean:
 	rm -rf $(LIB_NAME) *.o tests
+
+#table.so: setup.py table.pyx stringTable.pxd libstringTable.so
+#	CFLAGS="-I." LDFLAGS="-L. -Wl,-rpath -Wl,." python setup.py build_ext --inplace
+
+#.PHONY: run
+#run: table.so
+#	python -m tableTest
