--- a/core/Makefile
+++ b/core/Makefile
@@ -45,9 +45,16 @@ $(LIB_FILENAME): $(OBJECTS)
 $(PY_LIB_FILENAME): setup.py $(PY_LIB_NAME).pyx $(LIB_NAME).pxd $(LIB_FILENAME)
 	CFLAGS="-I." LDFLAGS="-L. -Wl,-rpath -Wl,." python setup.py build_ext --inplace
 
+
+## bvd: this does not work for everyone, but these are the commands that you can
+## run yourself to get a user local version of Cython installed, if you can't
+## otherwise have it installed system-wide. After the following is complete, you
+## can delete the Cython directory, is it no longer needed (all built libraries
+## are installed under ~/.local)
 .PHONY: cython
 cython:
 	wget http://cython.org/release/$(CYTHON_VERSION).tar.gz
+	tar -zxvf $(CYTHON_VERSION).tar.gz
 	cd $(CYTHON_VERSION)
 	python setup.py install --user
 
