--- a/apps/lda/Makefile
+++ b/apps/lda/Makefile
@@ -1,5 +1,5 @@
 lda.so: setup.py lda.pyx
-	CFLAGS="-I." LDFLAGS="-L. -Wl,-rpath -Wl,." python setup.py build_ext --inplace
+	CFLAGS="-I. -I../../core" LDFLAGS="-L. -Wl,-rpath -Wl,." python setup.py build_ext --inplace
 
 .PHONY: clean
 clean:
