fix really stupid pf init error (variable not initialized)

--- a/apps/lda/Makefile
+++ b/apps/lda/Makefile
@@ -1,4 +1,4 @@
-PYTHON = python-dbg
+PYTHON = python
 
 lda.so: setup.py lda.pyx
 	CFLAGS="-I. -I../../core" LDFLAGS="-L. -Wl,-rpath -Wl,." $(PYTHON) setup.py build_ext --inplace
