add numpy include dir to cflags

--- a/apps/lda/Makefile
+++ b/apps/lda/Makefile
@@ -1,7 +1,7 @@
 PYTHON = python
 
 lda.so: setup.py lda.pyx
-	CFLAGS="-I. -I../../core" LDFLAGS="-L. -Wl,-rpath -Wl,." $(PYTHON) setup.py build_ext --inplace
+	CFLAGS="-I. -I../../core -I/export/apps/lib/python2.7/site-packages/numpy/core/include" LDFLAGS="-L. -Wl,-rpath -Wl,." $(PYTHON) setup.py build_ext --inplace
 
 .PHONY: clean
 clean:
