--- a/src/lowl/SConscript
+++ b/src/lowl/SConscript
@@ -19,3 +19,5 @@ env.Alias('lowl-lib', lowl)
 tests = env.Program(target='tests', source=['tests.c'], LIBS=['lowl', 'm'],
     LIBPATH='.')
 env.Alias('lowl-tests', tests)
+
+Return('lowl')
