--- a/src/SConscript
+++ b/src/SConscript
@@ -4,5 +4,9 @@ Import('env')
 Export('env')
 
 lowl = env.SConscript('lowl/SConscript')
+Export('lowl')
+
 pylowl = env.SConscript('pylowl/SConscript')
+Export('pylowl')
+
 env.SConscript('proj/SConscript')
