move PyExt to SConstruct, use for lda, update gitignores

--- a/src/proj/lda/SConscript
+++ b/src/proj/lda/SConscript
@@ -1,5 +1,7 @@
 # vim: ft=python
 
-Import('env')
-Export('env')
+Import('env', 'pylowl')
+
+lda = env.PyExt(target='lda', source=['lda', pylowl, 'pylowl.pxd'])
+Alias('lda', lda)
 
