--- a/src/lowl/SConscript
+++ b/src/lowl/SConscript
@@ -21,11 +21,11 @@ env.Alias('lowl', lowl)
 tests = env.Program(target='tests', source=['tests.c'], LIBS=['lowl', 'm'],
     LIBPATH='.')
 test_env = env.Clone()
-test_env.Append(ENV = {'LD_LIBRARY_PATH': os.path.split(lowl[0].abspath)[0]})
-run_tests = test_env.UntargetedLocalRunner([tests], [tests[0].abspath], '.')
+test_env.Append(ENV = {'LD_LIBRARY_PATH': lowl[0].dir.abspath})
+run_tests = test_env.NoTargetLocalRunner('tests', tests[0].abspath, [tests])
 env.Alias('lowl-tests', run_tests)
 
-install_lowl = env.Install('$PREFIX/lib', lowl)
+install_lowl = env.AlwaysBuild(env.Install('$PREFIX/lib', lowl))
 env.Alias('lowl-install', install_lowl)
 
 Return('lowl')
