--- a/src/proj/lda/SConscript
+++ b/src/proj/lda/SConscript
@@ -2,6 +2,12 @@
 
 Import('env', 'pylowl')
 
+Help('''
+        lda             Build lda
+        lda-install     Install lda
+'''.lstrip('\r\n'))
+
 lda = env.DistutilsBuildExt('lda', 'lda', deps=[pylowl, 'pylowl.pxd'])
 env.Alias('lda', lda)
 
+install_lda = env.DistutilsInstall('lda-install', lda)
