--- a/src/pylowl/SConscript
+++ b/src/pylowl/SConscript
@@ -4,6 +4,12 @@ Import('env', 'lowl')
 
 import os
 
+Help('''
+        pylowl          Build pylowl
+        pylowl-tests    Build and run tests for pylowl
+        pylowl-install  Install pylowl
+'''.lstrip('\r\n'))
+
 pylowl = env.DistutilsBuildExt('pylowl', 'pylowl', deps=[lowl, 'lowl.pxd'])
 env.Alias('pylowl', pylowl)
 
@@ -13,6 +19,6 @@ run_tests = test_env.NoTargetLocalRunner('pylowl-tests',
     'python -m doctest --doctest-extension=pyx -v pylowl.pyx'.split(),
     [pylowl, 'pylowl.pyx'])
 
-install_pylowl = env.DistutilsInstall('pylowl-install', pylowl, args=['--user'])
+install_pylowl = env.DistutilsInstall('pylowl-install', pylowl)
 
 Return('pylowl')
