--- a/src/proj/SConscript
+++ b/src/proj/SConscript
@@ -1,8 +1,8 @@
 # vim: ft=python
 
 
-Import('env', 'pylowl')
-Export('env', 'pylowl')
+Import('env', 'lowl', 'install_lowl', 'pylowl', 'install_pylowl')
+Export('env', 'lowl', 'install_lowl', 'pylowl', 'install_pylowl')
 
 
 SConscript('lda/SConscript')
