--- a/src/proj/lda/SConscript
+++ b/src/proj/lda/SConscript
@@ -1,7 +1,7 @@
 # vim: ft=python
 
 
-Import('env', 'pylowl', 'install_pylowl')
+Import('env', 'pylowl')
 
 
 Help('''
@@ -13,4 +13,4 @@ Help('''
 lda = env.DistutilsBuildExt('lda', 'lda', deps=[pylowl, 'pylowl.pxd'])
 env.Alias('lda', lda)
 
-install_lda = env.DistutilsInstall('lda-install', [lda, install_pylowl])
+install_lda = env.DistutilsInstall('lda-install', lda)
