--- a/src/lowl/SConscript
+++ b/src/lowl/SConscript
@@ -28,7 +28,7 @@ env.Alias('lowl', lowl)
 tests = env.Program(target='tests', source=['tests.c'], LIBS=['lowl', 'm'],
     LIBPATH='.')
 test_env = env.Clone()
-test_env.Append(ENV = {'LD_LIBRARY_PATH': lowl[0].dir.abspath})
+test_env.Append(ENV = {env['LD_LIB_PATH_ENV_VAR']: lowl[0].dir.abspath})
 run_tests = test_env.NoTargetLocalRunner('lowl-tests', [tests[0].abspath], [tests])
 
 install_lowl = env.AlwaysBuild(env.Install('$INSTALL_PREFIX/lib', lowl))
