--- a/src/pylowl/SConscript
+++ b/src/pylowl/SConscript
@@ -17,7 +17,7 @@ pylowl = env.DistutilsBuildExt('pylowl', 'pylowl', deps=[lowl, 'lowl.pxd'])
 env.Alias('pylowl', pylowl)
 
 test_env = env.Clone()
-test_env.Append(ENV = {'LD_LIBRARY_PATH': lowl[0].dir.abspath})
+test_env.Append(ENV = {env['LD_LIB_PATH_ENV_VAR']: lowl[0].dir.abspath})
 run_tests = test_env.NoTargetLocalRunner('pylowl-tests',
     'python -m doctest --doctest-extension=pyx -v pylowl.pyx'.split(),
     [pylowl, 'pylowl.pyx'])
