add bglda: hilariously, it compiles

--- a/src/proj/SConscript
+++ b/src/proj/SConscript
@@ -6,3 +6,4 @@ Export('env', 'lowl', 'install_lowl', 'pylowl', 'install_pylowl')
 
 
 SConscript('pflda/SConscript')
+SConscript('bglda/SConscript')
