--- a/src/proj/bglda/SConscript
+++ b/src/proj/bglda/SConscript
@@ -13,4 +13,4 @@ Help('''
 bglda = env.DistutilsBuildExt('core', 'core', deps=[pylowl, 'pylowl.pxd', 'data.py'])
 env.Alias('bglda', bglda)
 
-install_bglda = env.DistutilsInstall('bglda-install', bglda, deps=['data.py', '__init__.py'])
+install_bglda = env.DistutilsInstall('bglda-install', bglda, deps=['run.py', 'data.py', '__init__.py'])
