--- a/src/proj/SConscript
+++ b/src/proj/SConscript
@@ -1,8 +1,20 @@
 # vim: ft=python
 
 
-Import('env', 'lowl', 'install_lowl', 'pylowl', 'install_pylowl')
-Export('env', 'lowl', 'install_lowl', 'pylowl', 'install_pylowl')
+Import('env', 'lowl', 'install_lowl', 'lowl_env', 'pylowl', 'install_pylowl', 'pylowl_env')
+
+run_env = lowl_env.copy()
+run_env.update(pylowl_env)
+run_env_text = ' '.join('%s="%s"' % (k, v) for (k, v) in run_env.items())
+run_sh_text = r'''#!/bin/bash
+
+%s "$@"
+''' % run_env_text
+def write_run_sh(env, target, source):
+    with open(target[0].abspath, 'w') as f:
+        f.write(run_sh_text)
+
+Export('env', 'lowl', 'install_lowl', 'lowl_env', 'pylowl', 'install_pylowl', 'pylowl_env', 'write_run_sh')
 
 
 SConscript('pflda/SConscript')
