--- a/src/proj/pflda/SConscript
+++ b/src/proj/pflda/SConscript
@@ -13,4 +13,4 @@ Help('''
 pflda = env.DistutilsBuildExt('core', 'core', deps=[pylowl, 'pylowl.pxd', 'data.py'])
 env.Alias('pflda', pflda)
 
-install_pflda = env.DistutilsInstall('pflda-install', pflda, deps=['run_pf', 'run_gibbs', 'data.py', '__init__.py'])
+install_pflda = env.DistutilsInstall('pflda-install', pflda, deps=['pflda_run_pf', 'pflda_run_gibbs', 'data.py', '__init__.py'])
