move bglda runners to scripts

--- a/src/proj/bglda/SConscript
+++ b/src/proj/bglda/SConscript
@@ -13,7 +13,7 @@ Help('''
 bglda = env.DistutilsBuildExt('core', 'core', deps=[pylowl, 'pylowl.pxd', 'data.py'])
 env.Alias('bglda', bglda)
 
-install_bglda = env.DistutilsInstall('bglda-install', bglda, deps=['run.py', 'data.py', '__init__.py'])
+install_bglda = env.DistutilsInstall('bglda-install', bglda, deps=['bglda_run', 'data.py', '__init__.py'])
 
 run_sh = env.Command('run.sh', [], write_run_sh)
 env.Alias('run.sh', run_sh)
