--- a/src/proj/pflda/SConscript
+++ b/src/proj/pflda/SConscript
@@ -1,7 +1,7 @@
 # vim: ft=python
 
 
-Import('env', 'pylowl')
+Import('env', 'lowl', 'pylowl', 'lowl_env', 'pylowl_env', 'write_run_sh')
 
 
 Help('''
@@ -13,4 +13,11 @@ Help('''
 pflda = env.DistutilsBuildExt('core', 'core', deps=[pylowl, 'pylowl.pxd', Glob('*.py'), Glob('*.r'), Glob('*.sh'), Glob('*.qsub'), Glob('experiments/*.sh')])
 env.Alias('pflda', pflda)
 
+pflda_fat = env.Command([lowl[0].name, pylowl[0].name], [lowl, pylowl, pflda],
+    [Copy(lowl[0].name, lowl[0]), Copy(pylowl[0].name, pylowl[0])])
+env.Alias('pflda-fat', pflda_fat)
+
 install_pflda = env.DistutilsInstall('pflda-install', pflda, deps=['pflda_run_pf', 'pflda_run_gibbs', 'data.py', '__init__.py'])
+
+run_sh = env.Command('run.sh', [], write_run_sh)
+env.Alias('pflda-run-sh', run_sh)
